Feat: form을 통한 회원가입 api 구현
createMemberForm.html과 memberForm객체 형성하여 member객체 생성후 저장
memberForm의 이름, 비밀번호, 전화번호에 validation 사용

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<!--<head th:replace="fragments/header :: header">-->
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader" />
+<!--    <div th:replace="fragments/bodyHeader :: bodyHeader" />-->
     <div class="jumbotron">
         <h1>지금 나온 빵</h1>
 
         <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" href="/members/login">로그인</a>
+            <a class="btn btn-lg btn-secondary" href="/member/new">회원 가입</a>
+            <a class="btn btn-lg btn-secondary" href="/member/login">로그인</a>
         </p>
 
     </div>
-    <div th:replace="fragments/footer :: footer" />
+<!--    <div th:replace="fragments/footer :: footer" />-->
 </div> <!-- /container -->
 </body>
 </html>
