--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--<head th:replace="fragments/header :: header">-->
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 <div class="container">
-<!--    <div th:replace="fragments/bodyHeader :: bodyHeader" />-->
     <div class="jumbotron">
         <h1>지금 나온 빵</h1>
 
@@ -16,7 +14,6 @@
         </p>
 
     </div>
-<!--    <div th:replace="fragments/footer :: footer" />-->
-</div> <!-- /container -->
+</div>
 </body>
 </html>
