--- a/src/main/resources/templates/member/createMemberForm.html
+++ b/src/main/resources/templates/member/createMemberForm.html
@@ -1,21 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
 <style>
     .fieldError {
         border-color: #bd2130;
     } </style>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <form role="form" action="/member/new" th:object="${memberForm}" method="post">
 
         <div class="form-group">
-            <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요"
-                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('name')}"
-               th:errors="*{name}">Incorrect date</p>
+            <label th:for="loginId">아이디</label>
+            <input type="text" th:field="*{loginId}" class="form-control" placeholder="아이디를 입력하세요"
+                   th:class="${#fields.hasErrors('loginId')}? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('loginId')}"
+               th:errors="*{loginId}">Incorrect date</p>
         </div>
 
         <div class="form-group">
@@ -24,6 +22,14 @@
                    th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
             <p th:if="${#fields.hasErrors('password')}"
                th:errors="*{password}">Incorrect date</p>
+        </div>
+
+        <div class="form-group">
+            <label th:for="name">이름</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요"
+                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('name')}"
+               th:errors="*{name}">Incorrect date</p>
         </div>
 
         <div class="form-group">
@@ -55,7 +61,6 @@
 
     </form>
     <br/>
-    <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container -->
+</div>
 </body>
 </html>
