--- a/src/main/resources/templates/member/createMemberForm.html
+++ b/src/main/resources/templates/member/createMemberForm.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="ko">
 <html xmlns:th="http://www.thymeleaf.org">
 <style>
     .fieldError {
@@ -18,7 +19,7 @@
 
         <div class="form-group">
             <label th:for="password">비밀번호</label>
-            <input type="text" th:field="*{password}" class="form-control" placeholder="비밀번호을 입력하세요"
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호을 입력하세요"
                    th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
             <p th:if="${#fields.hasErrors('password')}"
                th:errors="*{password}">Incorrect date</p>
