--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <h2>로그인</h2>
-    <form role="form" action="/member/login" th:object="${loginForm}" method="post">
+    <form role="form" th:action="@{/member/login}" th:object="${loginForm}" method="post">
 
         <div>
             <label th:for="loginId">아이디 : </label>
@@ -25,7 +25,8 @@
         </div>
         <br/>
 
-        <button type="button" class="btn btn-primary">Submit</button>
+<!--        <button type="button" class="btn btn-primary">Submit</button>-->
+        <button type="submit">로그인</button>
     </form>
 </div>
 </body>
