--- a/src/main/resources/templates/member/memberHome.html
+++ b/src/main/resources/templates/member/memberHome.html
@@ -8,7 +8,9 @@
 <h1>CUSTOMER</h1>
 <div th:unless="${loginId == null}">
     <h3>[[${loginId}]]님 환영합니다!</h3>
-    <button onclick="location.href='/member/logout'">로그아웃</button>
+    <button onclick="location.href='/menu'">메뉴</button>
+    <button onclick="location.href='/info'">회원정보</button>
+    <button onclick="location.href='/logout'">로그아웃</button>
 </div>
 </body>
 </html>
