--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -77,6 +77,9 @@
                 </div>
             </div>
         </section>
+        <div>
+            <button onclick="location.href='/admin/items/new'">상품 등록</button>
+        </div>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
