--- a/src/main/resources/templates/member/adminHome.html
+++ b/src/main/resources/templates/member/adminHome.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<h1>ADMIN</h1>
+<h1 th:text="${role}">관리자 메뉴</h1>
 <div th:unless="${loginId == null}">
     <h3>[[${loginId}]]님 환영합니다!</h3>
+    <button onclick="location.href='/admin/items'">메뉴</button>
     <button onclick="location.href='/member/logout'">로그아웃</button>
 </div>
 </body>
