--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -20,6 +20,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/member/info">My Page</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/orders">주문 내역</a>
+                        </li>
+<!--                        <button onclick="location.href='/orders'">주문 내역</button>-->
 <!--                        <li class="nav-item dropdown">-->
 <!--                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>-->
 <!--                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
