--- a/src/main/resources/templates/member/memberHome.html
+++ b/src/main/resources/templates/member/memberHome.html
@@ -9,6 +9,7 @@
 <div th:unless="${loginId == null}">
     <h3>[[${loginId}]]님 환영합니다!</h3>
     <button onclick="location.href='/items'">메뉴</button>
+    <button onclick="location.href='/orders'">주문 내역</button>
     <button onclick="location.href='/info'">회원정보</button>
     <button onclick="location.href='/member/logout'">로그아웃</button>
 </div>
