--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -23,6 +23,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/orders">주문 내역</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/notifications">알림</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/member/logout">로그아웃</a>
+                        </li>
 <!--                        <button onclick="location.href='/orders'">주문 내역</button>-->
 <!--                        <li class="nav-item dropdown">-->
 <!--                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>-->
