--- a/src/main/resources/templates/item/itemDetails.html
+++ b/src/main/resources/templates/item/itemDetails.html
@@ -45,6 +45,13 @@
                 </div>
                 <button type="submit">주문하기</button>
             </form>
+            <form role="form" th:action="@{/items/{id}/cart (id=${item.id})}" method="post">
+                <div>
+                    <label for="count">장바구니수량</label>
+                    <input type="number" name="count" class="form-control" id="count" placeholder="장바구니 수량을 입력하세요">
+                </div>
+                <button type="submit">담기</button>
+            </form>
         </div>
 
         <div sec:authorize="hasAuthority('ADMIN')">
