--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -10,12 +10,12 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Fresh Bread</a>
+                <a class="navbar-brand" href="/member">Fresh Bread</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/menu">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/items">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/member/info">My Page</a>
@@ -29,16 +29,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/member/logout">로그아웃</a>
                         </li>
-<!--                        <button onclick="location.href='/orders'">주문 내역</button>-->
-<!--                        <li class="nav-item dropdown">-->
-<!--                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>-->
-<!--                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--                                <li><a class="dropdown-item" href="#!">All Products</a></li>-->
-<!--                                <li><hr class="dropdown-divider" /></li>-->
-<!--                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>-->
-<!--                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
-<!--                            </ul>-->
-<!--                        </li>-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <form class="d-flex" action= "/cart" method="get">
                         <button class="btn btn-outline-dark" type="submit">
