--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -1,16 +1,14 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="fragments/head :: headFragment"></head>
 <body>
+<nav th:replace="fragments/navbar :: navbarFragment"></nav>
+<header th:replace="fragments/header :: headerFragment"></header>
 <div class="container">
     <div>
         <div>
         <form th:object="${orderSearch}" class="form-inline">
-<!--            <div class="form-group mb-2">-->
-<!--                <input type="text" th:field="*{memberName}" class="form- control" placeholder="시작날짜"/>-->
-<!--            </div>-->
-<!--            <div class="form-group mb-2">-->
-<!--                <input type="text" th:field="*{memberName}" class="form- control" placeholder="마지막 날짜"/>-->
-<!--            </div>-->
             <div class="form-group mx-sm-1 mb-2">
                 <select th:field="*{orderStatus}" class="form-control"> <option value="">주문상태</option>
                     <option th:each=
@@ -26,7 +24,7 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>#</th> <th>대표상품</th> <th>주문가격</th> <th>주문수량</th> <th>주문 시간</th> <th>주문상태</th> <th></th>
+                <th>#</th> <th>대표상품</th> <th>주문가격</th> <th>주문수량</th> <th>주문 시간</th> <th>주문상태</th> <th>결제금액</th> <th>주문 상세</th> <th>주문 취소</th>
             </tr>
             </thead>
             <tbody>
@@ -37,6 +35,10 @@
                 <td th:text="${result.orderItems[0].orderCount}"></td>
                 <td th:text="${result.orderDate}"></td>
                 <td th:text="${result.orderStatus}"></td>
+                <td th:text="${result.orderTotalPrice}"></td>
+                <td>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#" th:href="@{/orders/{id} (id=${result.orderId})}">주문 상세 보기</a></div>
+                </td>
 
 <!--                주문 취소 버튼-->
                 <td>
@@ -51,6 +53,7 @@
     </div>
 <!--    <div th:replace="fragments/footer :: footer"/>-->
 </div> <!-- /container -->
+<footer th:replace="fragments/footer :: footerFragment"></footer>
 </body>
 <!--자바스크립트 취소 로직-->
 <script>
