Refactor: controller패키지에 dto 패키지 추가

--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -79,9 +79,9 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div sec:authorize="isAuthenticated()" class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto">로그인하지 않으면 아무것도 못한다.</a></div>
-                            </div>
+<!--                            <div sec:authorize="isAuthenticated()" class="card-footer p-4 pt-0 border-top-0 bg-transparent">-->
+<!--                                <div class="text-center"><a class="btn btn-outline-dark mt-auto">로그인하지 않으면 아무것도 못한다.</a></div>-->
+<!--                            </div>지-->
                             <div sec:authorize="hasAuthority('CUSTOMER')" class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#" th:href="@{/items/{id} (id=${item.id})}">상세 보기 및 주문</a></div>
                             </div>
