Feat: 회원 상세 페이지 추가

--- a/src/main/resources/templates/member/memberHome.html
+++ b/src/main/resources/templates/member/memberHome.html
@@ -16,7 +16,7 @@
     <div class="btn btn-for-customer">
         <button onclick="location.href='/notifications'">알림</button></div>
     <div class="btn btn-for-customer">
-        <button onclick="location.href='/info'">회원정보</button></div>
+        <button onclick="location.href='/member/info'">회원정보</button></div>
     <div class="btn btn-for-customer">
         <button onclick="location.href='/member/logout'">로그아웃</button></div>
 </div>
